--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="title-bar">
         <h2>
           <a
-            href="../Calculadoras/Calculadoras.html"
+            href="../Calculadoras/index.html"
             style="text-decoration: none"
             >Calculadoras</a
           >
