--- a/index.html
+++ b/index.html
@@ -19,14 +19,12 @@
   </head>
   <body>
     <div id="navbar"></div>
-
+    
     <div style="text-align: center">
       <br />
       <div class="title-bar">
         <h2>
-          <a
-            href="../Calculadoras/index.html"
-            style="text-decoration: none"
+          <a href="../Calculadoras/index.html" style="text-decoration: none"
             >Calculadoras</a
           >
           <a
@@ -44,6 +42,7 @@
       </div>
       <br />
     </div>
+    <br />
 
     <a href="./C/Programando_em_C.html" class="link">Programando em C</a>
     <a href="./JavaScript/Programando_em_JavaScript.html" class="link"
