--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div id="navbar"></div>
-    
+
     <div style="text-align: center">
       <br />
       <div class="title-bar">
@@ -33,10 +33,13 @@
             >Ferramentas</a
           >
           <a
-            href="../Programando/Programando.html"
+            href="../Programando/index.html"
             class="color"
             style="text-decoration: none"
             >Programando</a
+          >
+          <a href="../Disciplinas_UFJ/index.html" style="text-decoration: none"
+            >Disciplinas UFJ</a
           >
         </h2>
       </div>
