--- a/C/Programando_em_C.html
+++ b/C/Programando_em_C.html
@@ -23,7 +23,15 @@
     <div style="text-align: center">
       <br />
       <div class="title-bar">
-        <h1><a class="color">Programando em C</a></h1>
+        <h1><a class="color">Programando em C</a
+          ><button
+            class="common transition"
+            style="position: absolute; right: 0"
+            onclick="goBack()"
+          >
+            Voltar
+          </button>
+        </h1>
       </div>
       <br />
     </div>
